--- a/index.html
+++ b/index.html
@@ -9,17 +9,21 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_2357817_ctpfu8tu40j.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_2357817_73yjugwbqjc.css">
 </head>
 
 <body>
     <header class="w">
         <div class="title">JD</div>
         <ul>
-            <li class="item"><a href="#">nav1</a></li>
-            <li class="item"><a href="#">nav2</a></li>
-            <li class="item mine">
-                <a class="link" href="#">我的京东</a>
+            <li>
+                <a class="item" href="#">您好，请登录</a><a class="item red reg" href="#">免费注册</a>
+            </li>
+            <li class="spacer">|</li>
+            <li><a class="item" href="#">我的订单</a></li>
+            <li class="spacer">|</li>
+            <li class="mine">
+                <a class="item link" href="#">我的京东 <span class="iconfont iconIcon-KeyboardArrow-Down-Rounded-copy"></span></a>
                 <ul class="inner-nav">
                     <li><a href="javascript:;">inner nav</a></li>
                     <li><a href="javascript:;">inner nav</a></li>
@@ -27,9 +31,40 @@
                     <li><a href="javascript:;">inner nav</a></li>
                 </ul>
             </li>
-            <li class="item"><a href="#">nav4</a></li>
-            <li class="item"><a href="#">nav5</a></li>
-            <li class="item"><a href="#">nav6</a></li>
+            <li class="spacer">|</li>
+            <li><a class="item" href="#">京东会员</a></li>
+            <li class="spacer">|</li>
+            <li class="mine">
+                <a class="item red link" href="#">企业采购 <span class="iconfont iconIcon-KeyboardArrow-Down-Rounded-copy"></span></a>
+                <ul class="inner-nav">
+                    <li><a href="javascript:;">inner nav</a></li>
+                    <li><a href="javascript:;">inner nav</a></li>
+                    <li><a href="javascript:;">inner nav</a></li>
+                    <li><a href="javascript:;">inner nav</a></li>
+                </ul>
+            </li>
+            <li class="spacer">|</li>
+            <li class="mine">
+                <a class="item link" href="#">客服服务 <span class="iconfont iconIcon-KeyboardArrow-Down-Rounded-copy"></span></a>
+                <ul class="inner-nav">
+                    <li><a href="javascript:;">inner nav</a></li>
+                    <li><a href="javascript:;">inner nav</a></li>
+                    <li><a href="javascript:;">inner nav</a></li>
+                    <li><a href="javascript:;">inner nav</a></li>
+                </ul>
+            </li>
+            <li class="spacer">|</li>
+            <li class="mine">
+                <a class="item link" href="#">网站导航 <span class="iconfont iconIcon-KeyboardArrow-Down-Rounded-copy"></span></a>
+                <ul class="inner-nav">
+                    <li><a href="javascript:;">inner nav</a></li>
+                    <li><a href="javascript:;">inner nav</a></li>
+                    <li><a href="javascript:;">inner nav</a></li>
+                    <li><a href="javascript:;">inner nav</a></li>
+                </ul>
+            </li>
+            <li class="spacer">|</li>
+            <li><a class="item" href="#">手机京东</a></li>
         </ul>
     </header>
     <nav class="w">
