--- a/tips.html
+++ b/tips.html
@@ -101,6 +101,8 @@
         <p>first-letter</p>
         <p>first-line</p>
         <p>text-overflow: ellipsis; overflow: hidden; white-space: nowrap;</p>
+        <p>columns: 20em;</p>
+        <p>column-span: all|none;</p>
     </div>
     <h1>form</h1>
     <div class="box">
