flex position bg

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             <li><a class="item" href="#">我的订单</a></li>
             <li class="spacer">|</li>
             <li class="mine">
-                <a class="item link" href="#">我的京东 <span class="iconfont iconIcon-KeyboardArrow-Down-Rounded-copy"></span></a>
+                <a class="item link" href="#">我的京东 <span
+                        class="iconfont iconIcon-KeyboardArrow-Down-Rounded-copy"></span></a>
                 <ul class="inner-nav">
                     <li><a href="javascript:;">inner nav</a></li>
                     <li><a href="javascript:;">inner nav</a></li>
@@ -35,7 +36,8 @@
             <li><a class="item" href="#">京东会员</a></li>
             <li class="spacer">|</li>
             <li class="mine">
-                <a class="item red link" href="#">企业采购 <span class="iconfont iconIcon-KeyboardArrow-Down-Rounded-copy"></span></a>
+                <a class="item red link" href="#">企业采购 <span
+                        class="iconfont iconIcon-KeyboardArrow-Down-Rounded-copy"></span></a>
                 <ul class="inner-nav">
                     <li><a href="javascript:;">inner nav</a></li>
                     <li><a href="javascript:;">inner nav</a></li>
@@ -45,7 +47,8 @@
             </li>
             <li class="spacer">|</li>
             <li class="mine">
-                <a class="item link" href="#">客服服务 <span class="iconfont iconIcon-KeyboardArrow-Down-Rounded-copy"></span></a>
+                <a class="item link" href="#">客服服务 <span
+                        class="iconfont iconIcon-KeyboardArrow-Down-Rounded-copy"></span></a>
                 <ul class="inner-nav">
                     <li><a href="javascript:;">inner nav</a></li>
                     <li><a href="javascript:;">inner nav</a></li>
@@ -55,7 +58,8 @@
             </li>
             <li class="spacer">|</li>
             <li class="mine">
-                <a class="item link" href="#">网站导航 <span class="iconfont iconIcon-KeyboardArrow-Down-Rounded-copy"></span></a>
+                <a class="item link" href="#">网站导航 <span
+                        class="iconfont iconIcon-KeyboardArrow-Down-Rounded-copy"></span></a>
                 <ul class="inner-nav">
                     <li><a href="javascript:;">inner nav</a></li>
                     <li><a href="javascript:;">inner nav</a></li>
