--- a/flex.html
+++ b/flex.html
@@ -67,7 +67,7 @@
         </ul>
     </ul>
     <div class="w box">
-        <div class="inner-box">v/h center</div>
+        <div class="inner-box">margin:auto; v/h center</div>
     </div>
     <ul class="w info">
         <li>hello</li>
