--- a/position.html
+++ b/position.html
@@ -21,9 +21,9 @@
             height: 40px;
             line-height: 40px;
             text-align: center;
-            border: 1px solid #c81623;
+            border: 1px solid var(--txt-wran-color);
             border-radius: 20px;
-            color: #c81623;
+            color: var(--txt-wran-color);
         }
 
         .badge {
@@ -34,7 +34,7 @@
             line-height: 20px;
             border-radius: 50%;
             text-align: center;
-            background-color: #c81623;
+            background-color: var(--txt-wran-color);
             color: #fff;
         }
 
