--- a/text.html
+++ b/text.html
@@ -96,6 +96,7 @@
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est deserunt soluta dolores voluptate assumenda
             consectetur odio sint totam quis enim!</p>
         <p class="source">line-height + margin-top + margin-bottom = n*line-height</p>
+        <p>必须显式的指定行高</p>
     </article>
 
 </body>
