--- a/background.html
+++ b/background.html
@@ -6,42 +6,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>background</title>
-    <link rel="stylesheet" href="css/reset.css">
+    <!-- <link rel="stylesheet" href="css/reset.css"> -->
     <style>
+        .egg {
+            width: 100px;
+            height: 160px;
+            background-color: rgba(255, 0, 0, .2);
+            background-image: linear-gradient(#f40 50%, #079 50%, #079 0);
+            border-radius: 50px 50px 50px 50px/100px 100px 60px 60px;
+        }
+
         .box {
             width: 400px;
             height: 200px;
-            border: 1px solid;
+            margin: 10px;
+            border: 20px solid rgba(255, 0, 0, .2);
             background-color: #f3f3f3;
             background-image: url(imgs/demo.jpg);
-            /* px em:相对于元素偏移的位置 */
-            /* background-position: 20px 20px; */
-            /* %：相对于图片自己显示的比例位置 */
-            /* 0% 0% 相当于 left top；100% 100% 相当于 bottom right */
             background-size: cover;
             background-repeat: no-repeat;
         }
 
-        .test {
-            width: 400px;
-            height: 200px;
-            border: 1px solid;
-            background-color: #f3f3f3;
-            background-image: url(imgs/demo.jpg);
-            /* px em:相对于元素偏移的位置 */
-            /* background-position: 20px 20px; */
-            /* %：相对于图片自己 */
-            /* 0% 0% 相当于 left top；100% 100% 相当于 bottom right */
-            /* background-position: 20% 20%; */
-            background-position: left 20px top 20px;
-            background-repeat: no-repeat;
+        .border {
+            background-origin: border-box;
+            background-clip: border-box;
+        }
+
+        .content {
+            background-origin: content-box;
+            background-clip: content-box;
+        }
+
+        .padding {
+            background-origin: padding-box;
+            background-clip: padding-box;
         }
     </style>
 </head>
 
 <body>
-    <div class="box"></div>
-    <div class="test"></div>
+    <div class="egg"></div>
+    <div class="box border">border-box</div>
+    <div class="box content">content-box</div>
+    <div class="box padding">padding-box</div>
 </body>
 
 </html>
