--- a/font.html
+++ b/font.html
@@ -8,7 +8,7 @@
     <title>Ali Font</title>
     <link rel="stylesheet" href="css/reset.css">
     <style>
-        h1 {
+        h1.title {
             text-align: center;
             line-height: 2;
             color: #c8bc9d;
@@ -57,11 +57,21 @@
         a:hover {
             color: #ecb425;
         }
+
+        .core {
+            text-align: center;
+            font-family: 'YuWei';
+            font-size: 96px;
+            color: #eb2f06;
+            outline: #fff;
+            text-shadow: 2px 0px 0px #fff, 0px 2px 0px #fff, -2px 0px 0px #fff, 0px -2px 0px #fff, 4px 4px 8px #333;
+        }
     </style>
 </head>
 
 <body>
-    <h1>阿里字体图标的使用</h1>
+    <h1 class="core">社会主义<br>核心价值观</h1>
+    <h1 class="title">阿里字体图标的使用</h1>
     <div class="wrap">
         <div class="box">
             <h2><span class="iconfont icon">&#xe747;</span>字体准备</h2>
@@ -133,13 +143,16 @@
         <div class="box">
             <h2><span class="iconfont icon">&#xe728;</span>知识点</h2>
             <ul class="step">
-                <li><span class="iconfont">&#xe603;</span> iconfont</li>
-                <li><span class="iconfont">&#xe603;</span> calc()</li>
-                <li><span class="iconfont">&#xe603;</span> &lt;pre&gt;</li>
-                <li><span class="iconfont">&#xe603;</span> &lt;code&gt;</li>
-                <li><span class="iconfont">&#xe603;</span> flex layout</li>
-                <li><span class="iconfont">&#xe603;</span> box-shadow</li>
-                <li><span class="iconfont">&#xe603;</span> border-radius</li>
+                <li><span class="iconfont">&#xe603;</span> 阿里字体图标iconfont</li>
+                <li><span class="iconfont">&#xe603;</span> 自定义字体@font-face</li>
+                <li><span class="iconfont">&#xe603;</span> CSS函数calc()</li>
+                <li><span class="iconfont">&#xe603;</span> 特殊符号&lt;pre&gt;</li>
+                <li><span class="iconfont">&#xe603;</span> 特殊符号&lt;code&gt;</li>
+                <li><span class="iconfont">&#xe603;</span> 弹性盒子布局flex layout</li>
+                <li><span class="iconfont">&#xe603;</span> 文字阴影text-shadow</li>
+                <li><span class="iconfont">&#xe603;</span> 盒子阴影box-shadow</li>
+                <li><span class="iconfont">&#xe603;</span> 边框圆角border-radius</li>
+                <li><span class="iconfont">&#xe603;</span> 自定义字体：禹卫行书简体</li>
             </ul>
         </div>
     </div>
