--- a/layout.html
+++ b/layout.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>common layout</title>
+  <title>layout</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/reset.css">
   <style>
@@ -31,14 +31,15 @@
       margin-left: 120px;
       background-color: #f80;
     } */
-    
+
     .pos-right {
       position: absolute;
       left: 120px;
       width: calc(100% - 120px);
-      height: 100%;      
+      height: 100%;
       background-color: #f80;
     }
+
     .float-left {
       float: left;
       min-width: 120px;
