--- a/search.html
+++ b/search.html
@@ -50,9 +50,11 @@
             font-size: 28px;
         }
 
-        .box:hover .ipt {
+        .box:hover .ipt,
+        .ipt:focus {
             width: 240px;
             padding-left: 20px;
+            color: #fff;
         }
 
         .box:hover .btn {
