--- a/transform input.html
+++ b/transform input.html
@@ -6,9 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>transform demo</title>
-  <link rel="shortcut icon" href="img/glpla.ico" type="image/x-icon">
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/vue.min.js"></script>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <style>
   html,
@@ -220,7 +218,6 @@
 
   .fade {
     position: relative;
-    background: #151515;
   }
 
   .fade::before {
@@ -265,14 +262,5 @@
   </div>
 
 </body>
-<script>
-  let app = new Vue({
-    el: '#app',
-    data: {
-      tips: 'welcome to glpla\' site'
-    },
-    methods: {}
-  })
-</script>
 
 </html>
