--- a/transform rotate.html
+++ b/transform rotate.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>js demo</title>
+    <title>js transform</title>
     <link rel="shortcut icon" href="img/glpla.ico" type="image/x-icon">
     <script src="js/jquery-3.3.1.min.js"></script>
 </head>
