--- a/font.html
+++ b/font.html
@@ -70,7 +70,7 @@
 </head>
 
 <body>
-    <h1 class="core">社会主义<br>核心价值观</h1>
+    <h1 class="core">社会主义核心价值观</h1>
     <h1 class="title">阿里字体图标的使用</h1>
     <div class="wrap">
         <div class="box">
