--- a/font.html
+++ b/font.html
@@ -60,7 +60,7 @@
 
         .core {
             text-align: center;
-            font-family: 'YuWei';
+            font-family: "YuWei";
             font-size: 96px;
             color: #eb2f06;
             outline: #fff;
