--- a/target.html
+++ b/target.html
@@ -99,7 +99,7 @@
 <body>
     <div class="w">
         <ul class="nav">
-            <li><a class='btn' href="#p0">nav1</a></li>
+            <li><a class='btn' href="#p0" target="_blank">nav1</a></li>
             <li><a class='btn' href="#p1">nav2</a></li>
             <li><a class='btn' href="#p2">nav3</a></li>
             <li><a class='btn' href="#p3">nav4</a></li>
