--- a/flex.html
+++ b/flex.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>flex layout</title>
     <link rel="stylesheet" href="css/reset.css">
+
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_2503000_cqfjjgitgot.css">
+
+
+
     <style>
         .w {
             width: 600px;
@@ -66,6 +71,7 @@
             <li><a href="javascript:;">nav6</a></li>
         </ul>
     </ul>
+    
     <div class="w box">
         <div class="inner-box">margin:auto; v/h center</div>
     </div>
