--- a/transform text.html
+++ b/transform text.html
@@ -12,8 +12,13 @@
 <style>
     body {
         height: 100vh;
-        font-family: 'yuwei';
-        background: #ff2408 linear-gradient(#f40, #ff2408);
+        font-family: 'yuwei';        
+    }
+    .container{
+        overflow: hidden;
+        width: 100vw;
+        height: 100vh;
+        background: #f40;
         animation: bg 10s linear infinite;
     }
 
@@ -23,6 +28,7 @@
 
     @keyframes bg {
         0% {
+            /* not available for <body> */
             filter: hue-rotate(0deg);
         }
 
@@ -34,16 +40,16 @@
     .wrap {
         position: relative;
         width: 800px;
-        height: 200px;
-        margin: 200px auto 0;
+        height: 200px;        
+        margin: 200px auto 0;        
     }
 
     .txt {
         font-size: 10rem;
         text-align: center;
         position: absolute;
-        left: 0;
-        top: 0;
+        left: 0px;
+        top: 0px;
         color: rgba(255, 255, 255, var(--alpha));
         animation: trans 2s forwards infinite alternate;
     }
@@ -56,15 +62,14 @@
 </style>
 
 <body>
-    <h1>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae saepe asperiores maxime voluptates ab? Quos
-        nostrum dolorem facilis laborum quod. Mollitia quod sint aliquid debitis cupiditate, libero voluptatem dolores
-        placeat.</h1>
-    <div class="wrap">
-        <span class='txt t0' style='--pos:-12px;--alpha:1'>妈妈辛苦啦</span>
-        <span class='txt t1' style='--pos:-9px;--alpha:.7'>妈妈辛苦啦</span>
-        <span class='txt t2' style='--pos:-6px;--alpha:.5'>妈妈辛苦啦</span>
-        <span class='txt t3' style='--pos:-3px;--alpha:.3'>妈妈辛苦啦</span>
-        <span class='txt t4' style='--pos:0px;--alpha:.2'>妈妈辛苦啦</span>
+    <div class="container">
+        <div class="wrap">
+            <span class='txt t0' style='--pos:-12px;--alpha:1'>妈妈辛苦啦</span>
+            <span class='txt t1' style='--pos:-9px;--alpha:.7'>妈妈辛苦啦</span>
+            <span class='txt t2' style='--pos:-6px;--alpha:.5'>妈妈辛苦啦</span>
+            <span class='txt t3' style='--pos:-3px;--alpha:.3'>妈妈辛苦啦</span>
+            <span class='txt t4' style='--pos:0px;--alpha:.2'>妈妈辛苦啦</span>
+        </div>
     </div>
 </body>
 
