--- a/transform.html
+++ b/transform.html
@@ -228,6 +228,8 @@
         }
         #perspective .front{
             transform: rotateY(0deg);
+            background-image: url(imgs/slider1.jpg);
+            background-size: cover;
         }
 
         #perspective .back{
